# ruia

./: .env  .gitignore  .pylintrc  .travis.yml  404.html  AUTHORS  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Caddyfile  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  dev_requirements.txt  index.html  mkdocs.yml  setup.cfg  setup.py  sitemap.xml  test.py
aspider/: __init__.py  field.py  item.py  middleware.py  request.py  response.py  settings.py  spider.py  wrappers.py
aspider/utils/: __init__.py  log.py  tools.py
assets/fonts/: font-awesome.css
cn/: README.html  index.html  introduction.html  plugins.html  tutorials.html  zh_index.html
cn/00_快速开始/: _index.html
cn/01_入门指南/: 1.概览.html  2.安装.html  3.定义 Item.html  4.运行 Spider.html  5.个性化.html  6.插件.html  7.帮助.html  _index.html
cn/02_基础概念/: 1.Request.html  2.Response.html  3.Item.html  4.Field.html  5.Spider.html  6.Middleware.html  _index.html
docs/: conf.py  index.html  index.md  requirements.txt
en/: quickstart.html
examples/: demo.py  douban_by_spider.py  hacker_news.txt  hacker_news_by_item.py  hacker_news_by_spider.py  jianshu_js_demo.py  middleware_example.py
ruia/: __init__.py  database.py  exceptions.py  field.py  item.py  middleware.py  request.py  response.py  settings.py  spider.py  spider_hook.py  wrappers.py
ruia.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
search/: search_index.json
tests/: __init__.py  settings.py  test_field.py  test_item.py  test_middleware.py  test_request.py  test_response.py  test_settings.py  test_spider.py
(+182 files in other folders)
