[isort]
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
line_length=120
known_first_party=ruia
lines_between_types=1
default_section=THIRDPARTY
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[flake8]
ignore = D203,F401
max-line-length = 120
exclude = .git,__pycache__,old,build,dist
max-complexity = 10

[metadata]
license_file = LICENSE

[bdist_wheel]
universal = 1